// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enumeration declaration Example 1 1`] = `
Object {
  "data": Object {
    "attributes": Array [],
    "cases": Array [
      Object {
        "data": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "annotation": Object {
                  "data": Object {
                    "genericArguments": Array [],
                    "id": "0",
                    "identifier": Object {
                      "id": "0",
                      "isPlaceholder": false,
                      "string": "Wrapped",
                    },
                  },
                  "type": "typeIdentifier",
                },
                "id": "0",
              },
              "type": "associatedValue",
            },
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "value",
          },
        },
        "type": "enumerationCase",
      },
      Object {
        "data": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "none",
          },
        },
        "type": "enumerationCase",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "genericParameters": Array [
      Object {
        "data": Object {
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "Wrapped",
          },
        },
        "type": "parameter",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "id": "0",
    "name": Object {
      "id": "0",
      "name": "Optional",
    },
  },
  "type": "enumeration",
}
`;

exports[`enumeration declaration Example 2 1`] = `
Object {
  "data": Object {
    "attributes": Array [],
    "cases": Array [
      Object {
        "data": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "annotation": Object {
                  "data": Object {
                    "genericArguments": Array [],
                    "id": "0",
                    "identifier": Object {
                      "id": "0",
                      "isPlaceholder": false,
                      "string": "Number",
                    },
                  },
                  "type": "typeIdentifier",
                },
                "id": "0",
              },
              "type": "associatedValue",
            },
            Object {
              "data": Object {
                "annotation": Object {
                  "data": Object {
                    "genericArguments": Array [],
                    "id": "0",
                    "identifier": Object {
                      "id": "0",
                      "isPlaceholder": false,
                      "string": "String",
                    },
                  },
                  "type": "typeIdentifier",
                },
                "id": "0",
              },
              "type": "associatedValue",
            },
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "bar",
          },
        },
        "type": "enumerationCase",
      },
      Object {
        "data": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "annotation": Object {
                  "data": Object {
                    "genericArguments": Array [],
                    "id": "0",
                    "identifier": Object {
                      "id": "0",
                      "isPlaceholder": false,
                      "string": "Number",
                    },
                  },
                  "type": "typeIdentifier",
                },
                "id": "0",
                "label": Object {
                  "id": "0",
                  "name": "label1",
                },
              },
              "type": "associatedValue",
            },
            Object {
              "data": Object {
                "annotation": Object {
                  "data": Object {
                    "genericArguments": Array [],
                    "id": "0",
                    "identifier": Object {
                      "id": "0",
                      "isPlaceholder": false,
                      "string": "String",
                    },
                  },
                  "type": "typeIdentifier",
                },
                "id": "0",
                "label": Object {
                  "id": "0",
                  "name": "label2",
                },
              },
              "type": "associatedValue",
            },
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "baz",
          },
        },
        "type": "enumerationCase",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "genericParameters": Array [
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "id": "0",
    "name": Object {
      "id": "0",
      "name": "Foo",
    },
  },
  "type": "enumeration",
}
`;

exports[`enumeration declaration Example 3 1`] = `
Object {
  "data": Object {
    "attributes": Array [
      Object {
        "data": Object {
          "arguments": Array [
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "expression": Object {
            "data": Object {
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "attr",
              },
            },
            "type": "identifierExpression",
          },
          "id": "0",
        },
        "type": "functionCallExpression",
      },
    ],
    "cases": Array [
      Object {
        "data": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "b",
          },
        },
        "type": "enumerationCase",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "genericParameters": Array [
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "id": "0",
    "name": Object {
      "id": "0",
      "name": "A",
    },
  },
  "type": "enumeration",
}
`;

exports[`enumeration declaration Example 4 1`] = `
Object {
  "data": Object {
    "attributes": Array [
      Object {
        "data": Object {
          "arguments": Array [
            Object {
              "data": Object {
                "expression": Object {
                  "data": Object {
                    "id": "0",
                    "literal": Object {
                      "data": Object {
                        "id": "0",
                        "value": 42,
                      },
                      "type": "number",
                    },
                  },
                  "type": "literalExpression",
                },
                "id": "0",
                "label": "c",
              },
              "type": "argument",
            },
            Object {
              "data": Object {
                "expression": Object {
                  "data": Object {
                    "id": "0",
                    "literal": Object {
                      "data": Object {
                        "id": "0",
                        "value": "hello",
                      },
                      "type": "string",
                    },
                  },
                  "type": "literalExpression",
                },
                "id": "0",
                "label": "d",
              },
              "type": "argument",
            },
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "expression": Object {
            "data": Object {
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "attr",
              },
            },
            "type": "identifierExpression",
          },
          "id": "0",
        },
        "type": "functionCallExpression",
      },
    ],
    "cases": Array [
      Object {
        "data": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "b",
          },
        },
        "type": "enumerationCase",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "genericParameters": Array [
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "id": "0",
    "name": Object {
      "id": "0",
      "name": "A",
    },
  },
  "type": "enumeration",
}
`;

exports[`enumeration declaration Example 5 1`] = `
Object {
  "data": Object {
    "attributes": Array [
      Object {
        "data": Object {
          "arguments": Array [
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "expression": Object {
            "data": Object {
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "attr1",
              },
            },
            "type": "identifierExpression",
          },
          "id": "0",
        },
        "type": "functionCallExpression",
      },
      Object {
        "data": Object {
          "arguments": Array [
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "expression": Object {
            "data": Object {
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "attr2",
              },
            },
            "type": "identifierExpression",
          },
          "id": "0",
        },
        "type": "functionCallExpression",
      },
    ],
    "cases": Array [
      Object {
        "data": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "b",
          },
        },
        "type": "enumerationCase",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "genericParameters": Array [
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "id": "0",
    "name": Object {
      "id": "0",
      "name": "A",
    },
  },
  "type": "enumeration",
}
`;
